--- a/components/modals/contactcenter-modal.html
+++ b/components/modals/contactcenter-modal.html
@@ -22,8 +22,15 @@
             Your browser does not support the video tag.
         </video>
     </div>
-    <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor. Cras elementum ultrices diam. Maecenas ligula massa, varius a, semper congue, euismod non, mi.
+       <p>
+  	Content Here
+ 	 Content Here
+ 	 Content Here
+ 	 Content Here
+ 	 Content Here
+ 	 Content Here
+ 	 Content Here
+ 	 Content Here
     </p>
   </div>
   <div class="modal-actions">
