--- a/components/modals/professionals-modal.html
+++ b/components/modals/professionals-modal.html
@@ -23,7 +23,14 @@
         </video>
     </div>
     <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor.
+  	Content Here
+ 	 Content Here
+ 	 Content Here
+ 	 Content Here
+ 	 Content Here
+ 	 Content Here
+ 	 Content Here
+ 	 Content Here
     </p>
   </div>
   <div class="modal-actions">
