--- a/components/modals/itsupport-modal.html
+++ b/components/modals/itsupport-modal.html
@@ -22,8 +22,15 @@
             Your browser does not support the video tag.
         </video>
     </div>
-    <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor.
+       <p>
+  	Content Here
+ 	 Content Here
+ 	 Content Here
+ 	 Content Here
+ 	 Content Here
+ 	 Content Here
+ 	 Content Here
+ 	 Content Here
     </p>
   </div>
   <div class="modal-actions">
