Fix modal asset paths and close buttons

--- a/components/modals/business-modal.html
+++ b/components/modals/business-modal.html
@@ -1,6 +1,6 @@
 <div class="modal-overlay" id="business-modal">
 <div class="ops-modal">
-  <button class="modal-x" data-close aria-label="Close">&times;</button>
+  <button class="close-button" data-close aria-label="Close">&times;</button>
   <div class="modal-header">
     <h3 data-es="Operaciones de Negocio">Business Operations</h3>
   </div>
@@ -42,5 +42,5 @@
   </div>
   </div>
 </div>
-<link rel="stylesheet" href="modal-styles.css">
-<script src="draggable.js"></script>
+<link rel="stylesheet" href="components/modals/modal-styles.css">
+<script src="components/modals/draggable.js"></script>
