--- a/components/modals/business-modal.html
+++ b/components/modals/business-modal.html
@@ -35,8 +35,8 @@
     </p>
   </div>
   <div class="modal-actions">
-    <button class="modal-btn cta" onclick="openModal('contact')">Contact Us</button>
-    <button class="modal-btn primary" onclick="openModal('join-modal')">Join Us</button>
+    <a href="pages/contact.html" class="modal-btn cta">Contact Us</a>
+    <a href="pages/join.html" class="modal-btn primary">Join Us</a>
     <a href="business.html" class="modal-btn">Learn More</a>
     <button class="modal-btn" onclick="openChatbot()">Ask Chattia</button>
   </div>
